# shortcut-rust-client

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: ci.yml
src/: main.rs
