[package]
name = "shortcut"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["blocking"]}
anyhow = "1"
zip = "0.6.3"